# ofx2json

./: README.md  configure.ac
src/: Makefile.am  ofx2json.cpp
